feat: Integrate Tailwind CSS into project with configuration and styles

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="stylesheet" href="./src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cloning-gate-website</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="text-3xl text-green-400 p-20">
+      Setting up the project with tailwind css
+    </h1>
+  </body>
 </html>
