--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>cloning-gate-website</title>
   </head>
   <body>
-    <h1 class="text-3xl text-green-400 p-20">
-      Setting up the project with tailwind css
-    </h1>
+    <header class="grid-rows-2 absolute w-full">
+      <div class="bg-red-50 p-6 w-full"></div>
+      <div class="bg-green-50 p-6 w-full"></div>
+    </header>
+
+    <div class="py-44 bg-yellow-400"></div>
   </body>
 </html>
