feat: Create and Enhance hero section with new content and responsive images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>cloning-gate-website</title>
   </head>
   <body>
-    <header class="grid-rows-2 absolute w-full px-5 py-2">
+    <header
+      class="grid-rows-2 absolute w-full px-5 py-2 z-50 text-white bg-opacity-90"
+    >
       <!-- primary navagation  -->
       <nav class="w-full flex justify-between items-center">
         <div class="md:w-48 md:h-20 w-36 h-16 bg-ed-500 overflow-hidden">
@@ -235,11 +237,54 @@
       </nav>
     </header>
 
-    <div class="py-44 bg-yellow-400"></div>
+    <!-- Hero section -->
+    <div class="relative md:pt-[20rem] pt-[26rem] md:pb-[5rem] pb-[3rem] px-6">
+      <picture class="w-full h-full absolute top-0 left-0">
+        <source media="(min-width: 768px)" srcset="./public/hero.webp" />
+        <source media="(min-width: 754px)" srcset="./public/hero.webp" />
+        <img
+          src="./public/hero-medium.webp"
+          alt="An image of a cat"
+          class="w-full h-full object-center object-cover"
+        />
+      </picture>
+
+      <div class="z-30 relative">
+        <h1
+          class="text-4xl font-bold border-white border-t-2 border-l-2 border-r-2 p-4 w-fit uppercase text-white"
+        >
+          Make 2026 your year
+        </h1>
+        <h2
+          class="text-white text-xl max-w-2xl border-2 border-white p-4 font-semibold basis-full mb-8"
+        >
+          We offer a range of master’s courses in business and management,
+          allied health, computer science and engineering all available to start
+          in January 2026.
+        </h2>
+        <a
+          href="#"
+          class="inline-flex items-center gap-2 text-white font-semibold text-lg group border-2 border-white px-6 py-3 transition-colors duration-300 ease-in-out md:w-fit w-full justify-center"
+        >
+          <span class="group-hover:underline"
+            >Discover our January courses
+          </span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-chevron-right-icon lucide-chevron-right"
+          >
+            <path d="m9 18 6-6-6-6" />
+          </svg>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
-
-feat: Add the navigation header with responsive design and logo integration - -
-Add new logo SVG file to the public directory - Implement primary and secondary
-- navigation menus with hover effects - Ensure responsiveness for different
-screen - sizes using Tailwind CSS classes
