feat: Enhance the Discover section by adding some cards

--- a/index.html
+++ b/index.html
@@ -360,22 +360,98 @@
         Discover the University of Liverpool
       </h1>
 
-      <!-- card  -->
+      <!-- about card  -->
       <div class="grid lg:grid-cols-5 md:grid-cols-1 gap-6">
-        <div class="bg-red-300 lg:col-span-2 p-20 lg:block hidden"></div>
-        <div class="bg-green-300 lg:col-span-3 p-4">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus sit
-          accusamus voluptatibus similique quis? Ipsa mollitia ab qui beatae
-          aspernatur? Tempore dicta tenetur, necessitatibus repellat quasi
-          provident, tempora eius quas odit commodi nesciunt iste laborum sed
-          pariatur assumenda, dolor nisi? Blanditiis quam recusandae nihil quod?
-          Harum modi perferendis soluta at tempora excepturi dignissimos,
-          praesentium sint, repellendus voluptatem ea officia similique
-          molestias, voluptate dicta porro officiis fuga vel eius enim. Maiores
-          fugit accusantium quod doloremque quasi minus quos ipsa itaque
-          necessitatibus, hic accusamus sequi praesentium molestias, optio
-          impedit facilis error rerum fugiat possimus saepe? Inventore laborum
-          maxime vel nihil quos. Officia.
+        <div class="lg:col-span-2 h-80 lg:block hidden overflow-hidden">
+          <img
+            src="./public/contact-us-VGM.jpg.jpeg"
+            alt=""
+            class="w-full h-full object-cover object-center"
+          />
+        </div>
+        <div class="lg:col-span-3">
+          <h2 class="text-xl pb-8">
+            We are the University of Liverpool. Located at the heart of a
+            thrilling world city, we are a dynamic institution of academic
+            excellence and innovation, making a positive impact across the
+            United Kingdom and the wider world.
+          </h2>
+
+          <p class="text-base pb-6">
+            Since 1881, we've been at the forefront of world-class research and
+            education, known for our cutting-edge facilities and relentless
+            pursuit of excellence and achievement. Find out how you can be part
+            of our vibrant community and explore the work we’re doing with our
+            famous home city.
+          </p>
+
+          <div class="flex md:flex-row flex-col gap-4">
+            <a
+              href="#"
+              class="border px-6 py-3 text-lg hover:underline text-center"
+              >Learn about us</a
+            >
+            <a
+              href="#"
+              class="border px-6 py-3 text-lg hover:underline text-center"
+              >Liverpool: Our city, our inspiration
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- study card  -->
+      <div class="grid lg:grid-cols-6 md:grid-cols-1 bg-red-200 my-12">
+        <div
+          class="bg-[#222a58] text-white lg:px-10 lg:py-14 md:px-8 px-5 py-8 md:col-span-4 lg:order-first order-last"
+        >
+          <h1 class="lg:text-3xl md:text-2xl text-xl font-bold pb-3">
+            Study with us
+          </h1>
+          <p class="md:text-lg text-base">
+            Discover endless possibilities. We offer a range of courses with
+            support and expertise to help you succeed in your future career.
+            Find your perfect course, explore our subject areas or discover
+            everything you need to know about studying with us.
+          </p>
+
+          <div class="flex md:flex-row flex-col flex-wrap gap-4 mt-4">
+            <a
+              href="#"
+              class="border px-6 py-3 text-lg hover:underline text-center"
+              >Undergraduate</a
+            >
+            <a
+              href="#"
+              class="border px-6 py-3 text-lg hover:underline text-center"
+              >Masters</a
+            >
+            <a
+              href="#"
+              class="border px-6 py-3 text-lg hover:underline text-center"
+            >
+              Postgraduate research</a
+            >
+            <a
+              href="#"
+              class="border px-6 py-3 text-lg hover:underline text-center"
+              >Continuing Professional Development
+            </a>
+            <a
+              href="#"
+              class="border px-6 py-3 text-lg hover:underline text-center"
+              >International students
+            </a>
+          </div>
+        </div>
+        <div
+          class="lg:h-full w-full md:h-[28rem] h-[19rem] md:col-span-2 overflow-hidden"
+        >
+          <img
+            src="./public/68d896bb-735d-43ce-b168-604e36cc358d.webp"
+            alt="two students talking"
+            class="w-full h-full object-cover object-center"
+          />
         </div>
       </div>
     </section>
