--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     </section>
 
     <!-- Search Courses Section  -->
-    <form class="bg-[#222a58] text-white px-6 py-10">
+    <form class="bg-[#222a58] text-white md:px-6 px-1 py-10">
       <div class="container mx-auto">
         <fieldset class="grid md:grid-cols-5 grid-cols-1 gap-x-10 items-center">
           <div
@@ -401,9 +401,9 @@
       </div>
 
       <!-- study card  -->
-      <div class="grid lg:grid-cols-6 md:grid-cols-1 bg-red-200 my-12">
+      <div class="grid lg:grid-cols-6 grid-cols-1 mt-12 md:mb-12">
         <div
-          class="bg-[#222a58] text-white lg:px-10 lg:py-14 md:px-8 px-5 py-8 md:col-span-4 lg:order-first order-last"
+          class="bg-[#222a58] text-white lg:px-14 lg:py-20 md:px-8 px-5 py-8 md:col-span-4 lg:order-first order-last"
         >
           <h1 class="lg:text-3xl md:text-2xl text-xl font-bold pb-3">
             Study with us
@@ -452,6 +452,36 @@
             alt="two students talking"
             class="w-full h-full object-cover object-center"
           />
+        </div>
+      </div>
+
+      <!-- book seat card  -->
+      <div
+        class="bg-[#ee4270] px-4 py-6 flex justify-center gap-4 items-center md:flex-row flex-col"
+      >
+        <div
+          class="flex gap-6 md:basis-full flex-1 sm:flex-nowrap sm:items-start justify-center flex-wrap"
+        >
+          <div class="w-44 h-20 overflow-hidden">
+            <img src="./public/conversation.png" class="w-full h-full" alt="" />
+          </div>
+          <div
+            class="text-white md:flex-row flex-col flex gap-4 items-start justify-center sm:text-left text-center"
+          >
+            <h1 class="text-4xl font-bold">Undergraduate open events</h1>
+            <p class="text-2xl">
+              Meet us online at our Undergraduate Online Open Week to find out
+              more about studying a degree at Liverpool.
+            </p>
+          </div>
+        </div>
+
+        <div class="bg-blue-500">
+          <button
+            class="bg-[#222a58]/90 hover:bg-[#222a58] text-white py-3 lg:px-4 px-4 md:px-1 text-lg w-[15rem] md:w-[11rem] lg:w-[15rem] font-bold hover:underline cursor-pointer"
+          >
+            Book your place
+          </button>
         </div>
       </div>
     </section>
