feat: Add  our ranking Section

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         </div>
       </section>
 
-      <!-- Search Courses Section  -->
+      <!--Note: Search Courses Section  -->
       <form class="bg-[#222a58] text-white md:px-6 px-1 py-10">
         <div class="container mx-auto">
           <fieldset
@@ -359,7 +359,7 @@
         </div>
       </form>
 
-      <!-- Discover Section  -->
+      <!--Note: Discover Section  -->
       <section class="px-6 py-14">
         <h1 class="font-bold text-4xl pb-7">
           Discover the University of Liverpool
@@ -406,7 +406,7 @@
         </div>
       </section>
 
-      <!-- study card  -->
+      <!-- Note:study card  -->
       <section class="lg:px-6">
         <div class="grid lg:grid-cols-6 grid-cols-1 mt-12 lg:mb-12">
           <div
@@ -463,7 +463,7 @@
         </div>
       </section>
 
-      <!-- book seat card  -->
+      <!--Note: book seat card  -->
       <section class="lg:px-6">
         <div
           class="bg-[#ee4270] px-4 py-6 flex justify-center gap-4 items-center lg:flex-row flex-col"
@@ -499,8 +499,8 @@
         </div>
       </section>
 
-      <!-- Fellowship  card  -->
-      <section class="px-6 mb-20">
+      <!--Note: Fellowship  card  -->
+      <section class="px-6 mb-16">
         <div
           class="grid lg:grid-cols-2 grid-cols-1 lg:mt-8 bg-[#222a58] lg:p-0 p-6"
         >
@@ -528,6 +528,108 @@
               >
             </div>
           </div>
+        </div>
+      </section>
+
+      <!--Note Our Ranking Section  -->
+      <section class="px-6 py-10 bg-[#f6f6f4]">
+        <h2 class="text-4xl text-[#20292e] font-bold mb-4">
+          Our rankings and reputation
+        </h2>
+        <div class="w-full grid sm:grid-cols-2 grid-cols-1 gap-5">
+          <div
+            class="p-10 bg-white w-full grid lg:items-center lg:gap-10 gap-12 lg:grid-cols-2 grid-cols-1 place-content-center"
+          >
+            <div
+              class="lg:h-[17rem] h-[24rem] lg:w-full mx-auto w-[80%] overflow-hidden"
+            >
+              <img
+                src="./public/b17e58a1-75e3-4dba-b623-3b8120adb6ce.png"
+                alt=""
+                class="w-full h-full object-cover object-center"
+              />
+            </div>
+            <div class="h-fit">
+              <p class="text-[#20292e] text-xl font-bold pb-3">World Top 150</p>
+              <p class="text-base text-gray-600">
+                QS World University Rankings 2026 places us in the Top 150
+                global universities. We've moved up to 147th in the world,
+                climbing 43 places in the last 3 years and up from 165th in the
+                2025 rankings.
+              </p>
+            </div>
+          </div>
+          <div class="w-full space-y-3">
+            <!--Note: reputation card 1 -->
+            <div
+              class="w-full bg-white p-6 gap-6 grid lg:grid-cols-5 grid-cols-1 lg:gap-8 items-center"
+            >
+              <div
+                class="lg:h-28 h-[24rem] bg-red-00 lg:w-full mx-auto w-[80%] overflow-hidden"
+              >
+                <img
+                  src="./public/74ec3ac9-95fd-476e-a67f-45afbbde2aea.png"
+                  alt=""
+                  class="w-full h-full object-cover object-center"
+                />
+              </div>
+              <div class="lg:col-span-4">
+                <p class="text-lg">
+                  Our teaching is rated Gold, the highest level, by the Teaching
+                  Excellence Framework.
+                </p>
+              </div>
+            </div>
+
+            <!--Note: reputation card 2 -->
+            <div
+              class="w-full bg-white p-6 gap-6 grid lg:grid-cols-5 grid-cols-1 lg:gap-8 items-center"
+            >
+              <div
+                class="lg:h-28 h-[24rem] bg-red-00 lg:w-full mx-auto w-[80%] overflow-hidden"
+              >
+                <img
+                  src="./public/7a0b985e-fb44-49d1-af7d-2dd626a04635.png"
+                  alt=""
+                  class="w-full h-full object-cover object-center"
+                />
+              </div>
+              <div class="lg:col-span-4">
+                <p class="text-lg">
+                  We've climbed 5 places to 18th in The Times and The Sunday
+                  Times Good University Guide 2026.
+                </p>
+              </div>
+            </div>
+            <!--Note: reputation card 3 -->
+            <div
+              class="w-full bg-white p-6 gap-6 grid lg:grid-cols-5 grid-cols-1 lg:gap-8 items-center"
+            >
+              <div
+                class="lg:h-28 h-[24rem] bg-red-00 lg:w-full mx-auto w-[80%] overflow-hidden"
+              >
+                <img
+                  src="./public/a25ad3ce-689a-4e92-b267-0327a4d03316.png"
+                  alt=""
+                  class="w-full h-full object-cover object-center"
+                />
+              </div>
+              <div class="lg:col-span-4">
+                <p class="text-lg">
+                  We’re ranked in the top 150 universities globally in the Times
+                  Higher Education World University rankings.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="mt-10">
+          <a
+            href="#"
+            class="border px-6 py-3 text-lg hover:underline text-center"
+            >Explore our rankings and reputation
+          </a>
         </div>
       </section>
     </main>
