feat: Add  find out more  Section

--- a/index.html
+++ b/index.html
@@ -632,6 +632,42 @@
           </a>
         </div>
       </section>
+
+      <!-- Note: Find out more card  -->
+      <section class="lg:px-6">
+        <div class="grid lg:grid-cols-6 grid-cols-1 mt-12 lg:mb-12">
+          <div
+            class="bg-[#222a58] text-white lg:px-14 lg:py-20 md:px-8 px-5 py-8 md:col-span-4 lg:order-first order-last"
+          >
+            <h1 class="lg:text-3xl md:text-2xl text-xl font-bold pb-3">
+              Discover Liverpool in India
+            </h1>
+            <p class="md:text-lg text-base">
+              Introducing our new campus in the city of Bengaluru, the centre of
+              high-tech industry in India. Find out more about our new campus,
+              which will strengthen existing partnerships, build new connections
+              and bring our world-class teaching and research to India.
+            </p>
+
+            <div class="flex md:flex-row flex-col flex-wrap gap-4 mt-8">
+              <a
+                href="#"
+                class="border px-6 py-3 text-lg hover:underline text-center"
+                >Find out more</a
+              >
+            </div>
+          </div>
+          <div
+            class="lg:h-full w-full md:h-[28rem] h-[19rem] md:col-span-2 overflow-hidden"
+          >
+            <img
+              src="./public/57201dfd-72bd-4dec-ab83-c44af9c1b82d.webp"
+              alt="two students talking"
+              class="w-full h-full object-cover object-center"
+            />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
