feat: Add Our Research Section with impact cards and student life details - Add vibrant student life section with image and links

--- a/index.html
+++ b/index.html
@@ -668,6 +668,161 @@
           </div>
         </div>
       </section>
+
+      <!--Note: Our research Section  -->
+      <section class="pb-10 pt-3 px-6">
+        <h1 class="text-3xl font-bold pb-6 text-[#20292e]">
+          Our research: Transforming lives, changing the worlds
+        </h1>
+        <p class="text-[#20292e] text-xl pb-6">
+          Discover how our research is making a difference all over the world.
+          As a founding member of the Russell Group, research is the driving
+          force behind our success, tackling real-world challenges to have a
+          positive impact on society and the world around us.
+        </p>
+        <div class="grid lg:grid-cols-3 grid-cols-1">
+          <!--Note: Research impact card 1  -->
+          <div class="group cursor-pointer border-t pt-6 lg:px-6 px-3">
+            <div class="flex items-center justify-between gap-3 pb-4">
+              <h2
+                class="text-xl font-bold border-b text-[#222a58] group-hover:border-b-2"
+              >
+                Research Frontiers
+              </h2>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-chevron-right-icon lucide-chevron-right"
+              >
+                <path d="m9 18 6-6-6-6" />
+              </svg>
+            </div>
+            <p class="text-[#20292e] text-base">
+              Learn more about our research frontiers and how we're driving
+              innovation in materials discovery, particle physics, therapeutics
+              innovation, AI for life, and infection resilience to build a
+              better future.
+            </p>
+          </div>
+          <!--Note: Research impact card 2  -->
+          <div class="group cursor-pointer border-t pt-6 lg:px-6 px-3">
+            <div class="flex items-center justify-between gap-3 pb-4">
+              <h2
+                class="text-xl font-bold border-b text-[#222a58] group-hover:border-b-2"
+              >
+                Interdisciplinary Centre for Sustainability Research
+              </h2>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-chevron-right-icon lucide-chevron-right"
+              >
+                <path d="m9 18 6-6-6-6" />
+              </svg>
+            </div>
+            <p class="text-[#20292e] text-base">
+              Explore our new Interdisciplinary Centre for Sustainability
+              Research and find out how we're utilising a variety of skills and
+              knowledge to find new developments in sustainability research.
+            </p>
+          </div>
+          <!--Note: Research impact card 3  -->
+          <div class="group cursor-pointer border-t pt-6 lg:px-6 px-3">
+            <div class="flex items-center justify-between gap-3 pb-4">
+              <h2
+                class="text-xl font-bold border-b text-[#222a58] group-hover:border-b-2"
+              >
+                Our impact
+              </h2>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-chevron-right-icon lucide-chevron-right"
+              >
+                <path d="m9 18 6-6-6-6" />
+              </svg>
+            </div>
+            <p class="text-[#20292e] text-base">
+              91% of our research is ranked world leading or internationally
+              excellent (REF 2021). Find out how our researchers are improving
+              the world we live in every day
+            </p>
+          </div>
+        </div>
+        <div class="flex md:flex-row flex-col flex-wrap gap-4 mt-8">
+          <a
+            href="#"
+            class="border px-6 py-3 text-lg hover:underline text-center"
+            >Explore our research</a
+          >
+        </div>
+      </section>
+
+      <!-- Note: vibrant student life section -->
+      <section class="lg:px-6">
+        <div class="grid lg:grid-cols-6 grid-cols-1 mt-3 lg:mb-12">
+          <div
+            class="lg:h-full w-full md:h-[28rem] h-[19rem] md:col-span-2 overflow-hidden"
+          >
+            <img
+              src="./public/42f7f721-2cc7-4898-9192-d58f8778579f.webp"
+              alt="two students talking"
+              class="w-full h-full object-cover object-center"
+            />
+          </div>
+          <div
+            class="bg-[#f6f6f4] text-black lg:px-14 lg:py-14 md:px-8 px-5 py-8 md:col-span-4"
+          >
+            <h1 class="lg:text-3xl md:text-2xl text-xl font-bold pb-3">
+              Discover a vibrant student life in Liverpool
+            </h1>
+            <p class="md:text-lg text-base">
+              Enjoy a fantastic student experience when you study with us.
+              Explore the Guild of Students, learn more about what’s happening
+              in our amazing home city and discover your accommodation options.
+            </p>
+
+            <div class="flex md:flex-row flex-col flex-wrap gap-4 mt-8">
+              <a
+                href="#"
+                class="border px-6 py-3 text-lg hover:underline text-center"
+                >Student life at Liverpool
+              </a>
+              <a
+                href="#"
+                class="border px-6 py-3 text-lg hover:underline text-center"
+                >Why choose Liverpool?</a
+              >
+              <a
+                href="#"
+                class="border px-6 py-3 text-lg hover:underline text-center"
+                >Find your accommodation</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
